tasky/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  namespace: tasky
  labels:
    app: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: nginx
        image: ghcr.io/gizabutler/tasky:latest
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: tasky-svc
  namespace: tasky
  labels:
    app.kubernetes.io/name: tasky-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tasky-svc
  ports:
    - name: svc-port
      port: 80
      targetPort: http
      protocol: TCP
